--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,144 @@
-.navbar{
+
+
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  
+  
+
+  
+  html {
+    box-sizing: border-box;
+ font-size: 62.5%;
+    scroll-behavior: smooth;
+  }
+  
+
+  
+  body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px; 
+    font-weight: 400;
+    line-height: 1.4;
+    color: #f0f0f0;;
+  }
+  
+  h1,
+  h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-align: center;
+  }
+  
+  h1 {
+    font-size: 6rem;
+  }
+  
+  h2 {
+    font-size: 4.2rem;
+  }
+  
+ 
+  a {
+    text-decoration: none;
+    color: white;
+  }
+
+  ul {
+    list-style: none;
+  }
+  
+  
+ 
+ 
+  .nav {
     display: flex;
     justify-content: flex-end;
     position: fixed;
-    width: 100%;
-    background: rgba(255, 0, 0, 0.614);
-    box-shadow: 0 5px 0 rgba(0, 0, 0, 0.6);
-    z-index: 10;
     top: 0;
     left: 0;
-}
-
-#navbarList 
-{
+    width: 100%;
+    background: #be3144;
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+    z-index: 10;
+  }
+  
+  .nav-list {
     display: flex;
-    margin-right: 3rem;
+    margin-right: 2rem;
+  }
+  
+  
+  
+  .nav-list a {
+    display: block;
+    font-size: 2.2rem;
+    padding: 2rem;
+  }
+  
 
-}
-
-ul{
-list-style: none;
-}
-
-li{
-padding-right: 1rem;
-}
-
-a
-{
-    text-decoration: none;
-    color: white;
-    font-size: 25px;
-    font-family: Arial;
-}
-
-#about {
+  
+  #about {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 700px;
-    background-color: rgb(55, 54, 54);
+    height: 100vh;
+    background-color: #000;
+  }
+  
+  #about > p {
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+    color: darkred;
+  }
+  
+ 
+  
+  #projects{
+    text-align: center;
+    padding: 10rem 2rem;
+    background: #45567d;
+  }
+  
+  .projecthead {
+    max-width: 640px;
+    margin: 0 auto 6rem auto;
+    border-bottom: 0.2rem solid #f0f0f0;;
+  }
+  
+ 
+  .projectb {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(333px, 1fr));
+    grid-gap: 2rem;
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    margin-bottom: 7rem;
+  }
+  
 
-   
+  
+  .project {
+    background: var(--main-gray);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+  }
+  
 
-}
 
-h1{
-font-size: 4rem;
-color: white;
-font-weight: 400;
-font-family: sans-serif;
-}
-p{
- font-size: 2rem;
- color: red;
- font-family: sans-serif;
-
-}
+  .projecti {
+    height: calc(100% - 6.9rem);
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .projecth {
+    font-size: 2rem;
+    padding: 2rem 0.5rem;
+  }
+  
